Update to js-version -smitbarmase

--- a/js-version/index.html
+++ b/js-version/index.html
@@ -8,9 +8,9 @@
 
     <table align="center">
       <tbody>
-        <tr>
-          <td><input class="grade" type="text" placeholder="Grade"></td>
-          <td><input class="credit" type="number" placeholder="Credit"></td>
+        <tr id="sub">
+          <td><input id="grade" type="text" placeholder="Grade"></td>
+          <td><input id="credit" type="number" placeholder="Credit"></td>
         </tr>
       </tbody>
     </table>
